Added check to see if the solution was found before trying to reach index 1 of a solved instance (ie avoiding out of bounds errros)
This gives a sucessful run on the exmple problem instance